--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CSS Radial Popup Menu Demo</title>
+    <title>Juan's Personal Website</title>
     <link href="https://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -14,7 +14,7 @@
             font-family: "Quicksand", sans-serif;
             text-align: center;
             min-height: 100vh;
-            background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
+            background-image: linear-gradient(to top, rgb(81, 101, 187) 0%, #b3daff 99%, rgb(163, 211, 250) 100%);
         }
 
         #menu {
