--- a/index.html
+++ b/index.html
@@ -122,24 +122,9 @@
 </head>
 
 <body>
-    <div id="css-script-menu">
-        <div class="css-script-center">
-            <div class="css-script-ads">
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- CSSScript Demo Page -->
-                <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px"
-                    data-ad-client="ca-pub-2783044520727903" data-ad-slot="3025259193"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
-            <div class="css-script-clear"></div>
-        </div>
-    </div>
     <div class="container">
         <ul id="menu">
-            <a class="menu-button icon-plus" href="#menu" title="Show navigation"><span
-                    class="fas fa-share-alt"></span></a>
+            <a class="menu-button icon-plus" href="#menu" title="Show navigation"><span></span></a>
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span
                     class="fas fa-share-alt"></span></a>
             <li class="menu-item">
