--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
 
         .menu-button {
-            width: 150px;
-            height: 150px;
+            width: 300px;
+            height: 300px;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -61,8 +61,8 @@
         }
 
         .menu-item {
-            width: 70px;
-            height: 70px;
+            width: 100px;
+            height: 100px;
             position: absolute;
             left: 55%;
             line-height: 5px;
@@ -125,8 +125,7 @@
     <div class="container">
         <ul id="menu">
             <a class="menu-button icon-plus" href="#menu" title="Show navigation"><span></span></a>
-            <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span
-                    class="fas fa-share-alt"></span></a>
+            <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
                 <a href="#menu">
                     <span class="fab fa-github"></span>
