--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
 
         .menu-button {
-            width: 300px;
-            height: 300px;
+            width: 150px;
+            height: 150px;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -61,8 +61,8 @@
         }
 
         .menu-item {
-            width: 100px;
-            height: 100px;
+            width: 70px;
+            height: 70px;
             position: absolute;
             left: 55%;
             line-height: 5px;
@@ -128,7 +128,9 @@
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
                 <a href="#menu">
-                    <span class="fab fa-github"></span>
+                    <span class="fab fa-github">
+                        <link href="https://github.com/JSebastianEC" rel="stylesheet" type="text/css">
+                    </span>
                 </a>
             </li>
             <li class="menu-item">
