--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
                 <a href="#menu">
-                    <span class="fab fa-github">
-                        <link href="https://github.com/JSebastianEC" rel="stylesheet" type="text/css">
-                    </span>
+                    <span class="fab fa-github" href="https://github.com/JSebastianEC"></span>
                 </a>
             </li>
             <li class="menu-item">
