--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <a class="menu-button icon-plus" href="#menu" title="Show navigation"><span></span></a>
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
-                <a href="#menu">
-                    <span class="fab fa-github" href="https://github.com/JSebastianEC"></span>
+                <a href="https://github.com/JSebastianEC">
+                    <span class="fab fa-github"></span>
                 </a>
             </li>
             <li class="menu-item">
