--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu">
-                    <span class="fab fa-twitter"></span>
+                <a href="www.linkedin.com/in/juansecai">
+                    <span class="fa-brands fa-linkedin"></span>
                 </a>
             </li>
             <li class="menu-item">
