--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </li>
             <li class="menu-item">
                 <a href="www.linkedin.com/in/juansecai">
-                    <span class="fa-brands fa-linkedin"></span>
+                    <span class="fab fa-linkedin"></span>
                 </a>
             </li>
             <li class="menu-item">
