--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
                 <a href="https://github.com/JSebastianEC">
-                    <span class="fab fa-github">github</span>
+                    <span class="fab fa-github"></span>
                 </a>
             </li>
             <li class="menu-item">
