--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="menu-button icon-plus" href="#menu" title="Show navigation"><span></span></a>
             <a class="menu-button icon-minus" href="#0" title="Hide navigation"><span></span></a>
             <li class="menu-item">
-                <a href="https://github.com/JSebastianEC">
+                <a href="https://www.github.com/JSebastianEC">
                     <span class="fab fa-github"></span>
                 </a>
             </li>
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="www.linkedin.com/in/juansecai">
+                <a href="https://www.linkedin.com/in/juansecai">
                     <span class="fab fa-linkedin"></span>
                 </a>
             </li>
