--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu">
+                <a href="#0">
                     <span class="fab fa-instagram"></span>
                 </a>
             </li>
