Testing Links not working
Changin z-index to 1 and adding text to span

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
             <li class="menu-item">
                 <a href="https://www.linkedin.com/in/juansecai">
-                    <span class="fab fa-linkedin"></span>
+                    <span class="fab fa-linkedin">xd</span>
                 </a>
             </li>
             <li class="menu-item">
