Adding areal-label parameter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="https://www.linkedin.com/in/juansecai">
+                <a href="https://www.linkedin.com/in/juansecai" aria-label="Twitter">
                     <span class="fab fa-linkedin">xd</span>
                 </a>
             </li>
