New version finished

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 						<p></p>
 
 						<p>I consider myself a good listener, team worker, patient and determined person. I'm
-							Interested in the potential of AI.</p>
+							interested in the potential of AI.</p>
 
 						<p>I have advanced English level, basic French level and I'm open to new professional
-							challenges that allow me to improve my skill mainly in Machine Learning and Data Science
+							challenges that allow me to improve my skills mainly in Machine Learning and Data Science
 							areas.</p>
 
 						<p>You can contact me by email at juansec13@gmail.com</p>
@@ -142,8 +142,25 @@
 										<span class="company">Anyone AI - August 2023 - Current</span>
 									</div>
 									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
+										<p>
+											• Conducted data analysis and visualization using SQL, Pandas, Matplotlib,
+											and Seaborn, facilitating data-driven decisions and insights.</p>
+										<p>• Orchestrated ETL pipeline creation for 2016-2018 revenue data analysis,
+											improving data handling.</p>
+										<p>• Applied descriptive and inferential statistics in organized data to
+											complete data-driven tasks.</p>
+										<p>• Implemented and applied Machine Learning algorithm like Random Forest and
+											LightGBM to analyse and predict Credit Default Risk.</p>
+										<p>• Tested and completed a Machine Learning API based on a microservice
+											architectures, using Redis, Flask, Docker and Tensorflow for animal
+											classification.</p>
+										<p>• Achieved 82% accuracy in classifying cars with 25 classes using
+											Convolutional Neural Networks and Transfer Learning (LeNET, ResNet50,
+											EfficientNetB7), demonstrating strong proficiency in image classification
+											tasks.
+
+
+										</p>
 									</div>
 								</div>
 							</li>
@@ -156,8 +173,21 @@
 											2023</span>
 									</div>
 									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at
-											the coast of the Semantics, a large language ocean.</p>
+										<p>● Achieved 80% F1-Score in cross-validation tests with a Deep Learning
+											Framework to assist in the treatment of chronic wounds from Hansen Patients
+											in Colombia, using Deep Learning Architectures as YoloV7 and U-Net,
+											utilizing Python and TensorFlow. Applied the framework to track chronic
+											wounds evolution and assist medical treatment.</p>
+										<p>● Processed and Labeled 300+ Chronic Wound Images for detection and binary
+											segmentation tasks, using Label-Studio. Processed Images were used in the
+											training of a Deep Learning Framework.</p>
+										<p>● Developed a Deep Learning Unrolled Algorithm for Phase Retrieval, using
+											TensorFlow, obtaining +5 dB improvement in Peak-to-Signal Noise Ratio for
+											single snapshot Phase Retrieval.</p>
+										<p>● Designed a custom activation function for Binary Neural Networks, using
+											MATLAB, TensorFlow and Pytorch, obtaining 90% accuracy in the classification
+											tasks on datasets as CIFAR-10 and STL-10.</p>
+										</p>
 									</div>
 								</div>
 							</li>
@@ -177,8 +207,8 @@
 											2023</span>
 									</div>
 									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
+										<p>Software Engineer Degree from Universidad Industrial de Santander. Obtained
+											the Cum Laude distinction.</p>
 									</div>
 								</div>
 							</li>
@@ -278,66 +308,22 @@
 				</div>
 				<div class="row">
 					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+						<a href="https://ieeexplore.ieee.org/abstract/document/9591671" class="work"
+							style="background-image: url(images/PR.png);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Deep Unrolled Phase Retrieval Approach from Coded Diffraction Patterns</h3>
+								<span>J. Estupiñán, A. Jerez, J. Bacca & H. Arguello.</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+						<a href="https://www.sciencedirect.com/science/article/abs/pii/S0010482523008004" class="work"
+							style="background-image: url(images/SI.png);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Design</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Website</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 text-center col-padding animate-box">
-						<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
-							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Automated chronic wounds medical assessment and tracking framework based on deep
+									learning</h3>
+								<span>B. Monroy, K. Sanchez, P. Arguello, J. Estupiñán, J. Bacca, C. Correa, L.
+									Valencia, J. Castillo, O. Mieles, H. Arguello, S. Castillo, F. Rojas-Morales.</span>
 							</div>
 						</a>
 					</div>
@@ -349,57 +335,58 @@
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Post on Medium</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
-							provident. Odit ab aliquam dolor eius.</p>
+						<h2>Posts</h2>
+						<p>Some moments I want to share</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+							<a class="blog-bg" style="background-image: url(images/Graduacion.jpg);"></a>
 							<div class="blog-text">
-								<span class="posted_on">Mar. 15th 2016</span>
-								<h3><a href="#">Photoshoot On The Street</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
-									<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-								</ul>
+								<span class="posted_on">Sep. 14, 2023</span>
+								<h3>Graduation day</h3>
+								<p>My graduation day, when I received my bachelor's degree as a software engineer from
+									Universidad Industrial de Santander and
+									also got Cum Laude distinction.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+							<a class="blog-bg" style="background-image: url(images/Sustentacion.jpeg);"></a>
 							<div class="blog-text">
-								<span class="posted_on">Mar. 15th 2016</span>
-								<h3><a href="#">Surfing at Philippines</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
-									<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-								</ul>
+								<span class="posted_on">Jul. 21, 2023</span>
+								<h3>Thesis defense</h3>
+								<p>The day of my thesis defense with my thesis director, when I presented my final
+									project of the career called "Computational tool to assist in the treatment of
+									chronc wounds of Hansen’s disease patients in the department of Santander"</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+							<a class="blog-bg" style="background-image: url(images/Wacci.JPG);"></a>
 							<div class="blog-text">
-								<span class="posted_on">Mar. 15th 2016</span>
-								<h3><a href="#">Capture Living On Uderwater</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>249</li>
-									<li><i class="icon-eye2"></i>308</li>
-									<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-								</ul>
+								<span class="posted_on">Nov. 9, 2022</span>
+								<h3>WACCI</h3>
+								<p>International Workshop on Adaptive, Compressive and Computational
+									Imaging (Wacci). It was an international event in the university, organized by HDSP
+									group where researchers from Chile, Uruguay, United States, Japan, Spain and Peru
+									participated, the event lasted 3 days and one of that days I presented one of the
+									projects I was working on to
+									the community.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a class="blog-bg" style="background-image: url(images/HDSP_Panel.JPG);"></a>
+							<div class="blog-text">
+								<span class="posted_on">Jul. 19, 2022</span>
+								<h3><a href="#">HDSP Day</a></h3>
+								<p>A day when HDSP students presented some of the work we did to the community of
+									the university, there were students of many careers.</p>
 							</div>
 						</div>
 					</div>
